# Ecommerce-data-warehouse-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  dag.py  dashboard.py  docker-compose.yml  generate_orders.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
data_generator/: generate_orders.py
docs/: data_dictionary.md
scripts/: pipeline_tasks.py
sql/: analytics.sql  create_tables.sql  quality_checks.sql  transform_orders.sql
